Login and register page design

--- a/WpfApp1/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1/WpfApp1.csproj
@@ -105,6 +105,7 @@
     <Resource Include="Login.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Background.png" />
     <Content Include="CameraLogo.jfif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
